# MazeOnPaper

./: .gitignore  CMakeLists.txt  Doxygen.confi  Doxygen.config  README.md
cmake_helpers/: default_component_structure.cmake
components/: CMakeLists.txt
components/enums/: CMakeLists.txt
components/enums/direction/: CMakeLists.txt
components/enums/direction/interface/: direction.hpp
components/enums/field_type/: CMakeLists.txt
components/enums/field_type/interface/: field_type.hpp
components/enums/step_result/: CMakeLists.txt
components/enums/step_result/interface/: step_result.hpp
components/game_master/: CMakeLists.txt
components/game_master/implementation/: CMakeLists.txt
components/game_master/implementation/include/: game_master_impl.hpp  maze.hpp  player_info.hpp  recurcive_maze_generator.hpp
components/game_master/implementation/src/: game_master_impl.cpp  maze.cpp  player_info.cpp  recurcive_maze_generator.cpp
components/game_master/implementation/test/: CMakeLists.txt  game_master_test.cpp
components/game_master/interface/: game_master.hpp
components/gtest/: CMakeLists.txt
components/notification/: CMakeLists.txt
components/notification/action_notification/: CMakeLists.txt
components/notification/action_notification/implementation/: CMakeLists.txt
components/notification/action_notification/implementation/include/: action_notification_impl.hpp
components/notification/action_notification/implementation/src/: action_notification_impl.cpp
components/notification/action_notification/interface/: action_notification.hpp
components/notification/endgame_notification/: CMakeLists.txt
components/notification/endgame_notification/implementation/: CMakeLists.txt
components/notification/endgame_notification/implementation/include/: endgame_notification_impl.hpp
components/notification/endgame_notification/implementation/src/: endgame_notification_impl.cpp
components/notification/endgame_notification/interface/: endgame_notification.hpp
components/notification/interaction_notification/: CMakeLists.txt
components/notification/interaction_notification/implementation/: CMakeLists.txt
components/notification/interaction_notification/implementation/include/: interaction_notification_impl.hpp
components/notification/interaction_notification/implementation/src/: interaction_notification_impl.cpp
components/notification/interaction_notification/interface/: interaction_notification.hpp
components/notification/step_notification/: CMakeLists.txt
components/notification/step_notification/implementation/: CMakeLists.txt
components/notification/step_notification/implementation/include/: step_notification_impl.hpp
components/notification/step_notification/implementation/src/: step_notification_impl.cpp
components/notification/step_notification/interface/: step_notification.hpp
components/player/: CMakeLists.txt
components/player/implementation/: CMakeLists.txt
components/player/implementation/include/: player_impl.hpp
components/player/implementation/src/: player_impl.cpp
components/player/interface/: player.hpp
components/point/: CMakeLists.txt
components/point/include/: point.hpp
components/point/src/: point.cpp
components/request/: CMakeLists.txt
components/request/action_request/: CMakeLists.txt
components/request/action_request/implementation/: CMakeLists.txt
components/request/action_request/implementation/include/: action_request_impl.hpp
components/request/action_request/implementation/src/: action_request_impl.cpp
components/request/action_request/interface/: action_request.hpp
components/request/interaction_request/: CMakeLists.txt
components/request/interaction_request/implementation/: CMakeLists.txt
components/request/interaction_request/implementation/include/: interaction_request_impl.hpp
components/request/interaction_request/implementation/src/: interaction_request_impl.cpp
components/request/interaction_request/interface/: interaction_request.hpp
components/request/step_request/: CMakeLists.txt
components/request/step_request/implementation/: CMakeLists.txt
components/request/step_request/implementation/include/: step_request_impl.hpp
components/request/step_request/implementation/src/: step_request_impl.cpp
components/request/step_request/interface/: step_request.hpp
components/response/: CMakeLists.txt
components/response/action_response/: CMakeLists.txt
components/response/action_response/implementation/: CMakeLists.txt
components/response/action_response/implementation/include/: action_response_impl.hpp
components/response/action_response/implementation/src/: action_response_impl.cpp
components/response/action_response/interface/: action_response.hpp
components/response/interaction_response/: CMakeLists.txt
components/response/interaction_response/implementation/: CMakeLists.txt
components/response/interaction_response/implementation/include/: interaction_response_impl.hpp
components/response/interaction_response/implementation/src/: interaction_response_impl.cpp
components/response/interaction_response/interface/: interaction_response.hpp
components/response/step_response/: CMakeLists.txt
components/response/step_response/implementation/: CMakeLists.txt
components/response/step_response/implementation/include/: step_response_impl.hpp
components/response/step_response/implementation/src/: step_response_impl.cpp
components/response/step_response/interface/: step_response.hpp
ui/: CMakeLists.txt  main.cpp
ui/include/: map.hpp  player_ui.hpp
ui/src/: map.cpp  player_ui.cpp
